--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -23,7 +23,10 @@
 #   non-go = false
 #   go-tests = true
 #   unused-packages = true
-
+#
+[metadata.heroku]
+  root-package = "github.com/mttrs/reqtrace"
+  go-version = "1.10.1"
 
 [prune]
   go-tests = true
