send a request to the origin app

--- a/app.json
+++ b/app.json
@@ -7,6 +7,6 @@
     }
   ],
   "scripts": {
-    "pr-predestroy": "env"
+    "pr-predestroy": "curl https://mttr-reqtrace.herokuapp.com?prname=$HEROKU_APP_NAME"
   }
 }
