--- a/app.json
+++ b/app.json
@@ -2,8 +2,7 @@
   "name": "Request trace",
   "repository": "https://github.com/mttrs/reqtrace",
   "addons": [
-    {
-      "plan": "papertrail:choklad"
-    }
-  ]
+    {}
+  ],
+  "stack": "container"
 }
